# motor_demos

./: .gitmodules  CMakeLists.txt  README.md
00_demo/: CMakeLists.txt  main.cpp  main.h  on_audio.cpp  on_graphics.cpp  on_render.cpp  on_tool.cpp
00_demo/scenes/: 00_intro_scene.h  01_scene.h  scene_0.cpp  scene_0.h  scene_0_coreos.cpp  scene_1.cpp  scene_1.h  scene_1_coreos.cpp
00_demo/working/: coords.txt
00_demo/working/0_intro_scene/: scene.blend  scene.blend1  scene.gltf
00_demo/working/0_intro_scene/shaders/: default_debug.msl  default_final.msl  shadow_pass.msl
00_demo/working/shaders/: dummy_debug_new_stuff_brain_storming.msl  dummy_final.msl
00_demo/working/shaders/post_process/: color_to_screen.msl  map_to_screen.msl
00_demo/working/shaders/scene_0/: cubes_debug.msl  cubes_final.msl
00_demo/working/shaders/scene_1/: .#cubes_debug.msl  cubes.lib.msl  cubes_debug.msl  cubes_final.msl  dummy_debug.msl  dummy_final.msl  sphere_debug.msl
common/: audio_analysis.cpp  audio_analysis.h  camera_collector.hpp  camera_manager.cpp  camera_manager.h  iscene.h  msl_component_collector.hpp  scene_manager.cpp  scene_manager.h  types.hpp
common/scene/: defered_scene.hpp  dummy_scene.hpp  iscene.h  scene_manager.cpp  scene_manager.h  simple_gltf_scene.hpp  stalled_scene.hpp
common/the_app/: on_audio.cpp  on_graphics.cpp  on_render.cpp  on_tool.cpp  the_app.cpp  the_app.h
demo_01/: CMakeLists.txt  app_camera.h  main.cpp
tests/: CMakeLists.txt  main.cpp  main.h
tests/00_test/: CMakeLists.txt  main.cpp
tests/00_test/working/scene_1/: scene.gltf
tests/00_test/working/shaders/post_process/: xfade_to_screen.msl
tests/00_test/working/shaders/scene_1/: cubes_debug.msl
tests/01_test/: CMakeLists.txt  main.cpp  main.h
tests/working/: scene1.gltf  scene2.gltf
tests/working/shaders/: .#dummy_debug_new_stuff_brain_storming.msl  dummy_debug.msl  dummy_debug_new_stuff_brain_storming.msl
tests/working/shaders/post_process/: color_to_screen.msl
tests/working/shaders/scene_1/: sphere.lib.msl
xx_demo/: CMakeLists.txt  main.h  on_graphics.cpp
xx_demo/scenes/: scene_0.cpp  scene_0.h  scene_1.h  scene_1_coreos.cpp
